--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.thymeleaf.cache=false
+spring.mvc.static-path-pattern=/**
+#H2database
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+#spring.datasource.url=jdbc:h2:C://data//test;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.schema=classpath:schema.sql
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
 
